--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,10 @@ dependencies {
 
     implementation 'com.fasterxml.jackson.core:jackson-databind'
 
+    // AWS S3 (SDK v2)
+    implementation 'software.amazon.awssdk:s3:2.20.160'
+    implementation 'software.amazon.awssdk:auth:2.20.160'
+    implementation 'software.amazon.awssdk:core:2.20.160'
 }
 
 dependencyManagement {
